tests/src/test/resources/scala/tools/nsc/effects/purity/PuritySuite-files/freshnessPending.check
newSource:12: error: effect type mismatch;
 found   : @mod() @loc(any)
 required: @mod() @loc()
@loc(any) does not conform to @loc()
  def t14: Object @loc() = new Object()  
                           ^
